refactor: Usar um pacote de componentes css já pronto
ao invés de recriar tudo do zero

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Delivery website demo</title>
   <link rel="stylesheet" href="./styles.less">
+  <link href="https://res.cloudinary.com/finnhvman/raw/upload/matter/matter-0.2.2.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
